--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,21 @@
-group 'com.software.designpatterns'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-apply plugin: 'application'
-
-mainClassName = System.getProperty("mainClass")
-
-sourceCompatibility = 1.8
+plugins {
+    id 'java'
+    id 'application'
+    id 'io.franzbecker.gradle-lombok' version '1.11'
+}
 
 repositories {
     mavenCentral()
+    jcenter()
 }
+
+mainClassName = System.getProperty("mainClass")
+sourceCompatibility = 1.8
+group 'com.software.designpatterns'
+version '1.0-SNAPSHOT'
+
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 }
-
